--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "pm2": ""
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
+    "pixi.js": "^6.0.2",
     "sass": "^1.30.0",
-    "sass-loader": "^10.1.0"
+    "sass-loader": "^10.1.0",
+    "view-design": "^4.5.0"
   },
   "devDependencies": {}
 }
